added base functionality

--- a/css/site.css
+++ b/css/site.css
@@ -13,7 +13,7 @@
 
 body {
     color: var(--primary-color);
-    background-image: linear-gradient(to right, #2193b0, #6dd5ed)
+    background-image: linear-gradient(to right, #e23a3a, #f58985)
 }
 
 nav {
